src/components/profile/styles.module.css
.Head {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px 16px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.linkHeadProfile {
    transition: color .3s ease;
    color: var(--text-primary);
    display: block;
    position: relative;
    height: 100%;
    padding: 12px 0;
    opacity: 0.7;
}

.linkHeadProfile:hover {
    color: var(--primary-light);
}

.linkHeadProfile.isActive {
    opacity: 1;
}

.linkHeadProfile::after {
    content: "";
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 3px;
    background: var(--primary-light);
    transition: transform .2s ease-out;
    transform: translateY(100%) scale(0);
    border-radius: 3px 3px 0 0;
}

.linkHeadProfile.isActive::after {
    transform: translateY(0) scale(1);
}

.linkRow {
    display: flex;
    padding: 0 16px;
    border-top: solid #444 1px;
    gap: var(--gap);
    white-space: nowrap;
    align-items: center;
    overflow-x: auto;

}

.linkRow::-webkit-scrollbar {
    display: none;
}

@media screen and (max-width: 536px) {
    .Head {
        flex-direction: column;
        align-items: flex-start;
        gap: var(--gap);
    }
}

